# VoxCPM2

./: .gitignore  install.bat  main.py  pyproject.toml  requirements.txt  start.bat
app/core/: audio_player.py  tts_engine.py
app/ui/: main_window.py
app/ui/panels/: base_panel.py  cloning_panel.py  history_panel.py  settings_panel.py  srt_panel.py  tts_panel.py  ultimate_clone_panel.py  voice_design_panel.py
app/ui/widgets/: audio_control_bar.py  waveform_canvas.py
app/utils/: config_manager.py  constants.py  history_manager.py  i18n.py  srt_parser.py  translator.py
