[project]
name = "voxcpm2-studio"
version = "1.0.0"
description = "VoxCPM2 TTS Studio — professional text-to-speech GUI"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4.0",
    "torchaudio>=2.4.0",
    "voxcpm",
    "customtkinter>=5.2.2",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.24.0",
]

# ── uv configuration ──────────────────────────────────────────────────────────
[tool.uv]
# Desktop app — no wheel packaging needed
package = false

# PyTorch with CUDA 12.4  (compatible with driver 550+ / CUDA runtime ≥12.4)
# Change cu124 → cu121 / cu118 if you need an older toolkit.
[[tool.uv.index]]
name     = "pytorch-cu124"
url      = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch      = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
